--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -25,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-    <title>Tinder Cat</title>
+    <title>Tinder Cats</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
